--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,48 @@
 body {
-  color: red;
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+
+.to-do {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  max-width: 90%;
+  /* margin: 0 auto; */
+  border: 1px solid blueviolet;
+}
+
+.to-do ul {
+  border: 1px solid yellow;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  /* margin: 0 auto; */
+  width: 100%;
+  max-width: 70%;
+}
+
+.to-do ul li {
+  list-style: none;
+  border: 1px solid;
+  width: 100%;
+  padding: 20px;
+  
+}
+
+.list-head {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+
+}
+
+#add-list {
+  width: 100%;
+  padding: 15px 0;
+  border: none;
 }
